--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
             max-width: 400px;
             padding: 60px 50px;
             margin: 50px auto 0;
-            background-image: url(/static/Logo1.png);
+            background-image: url(/static/JMeter_Login.png);
             background-size: cover;
         }
         .transparent:before {
